tests/ui/parser/removed-syntax-closure-lifetime.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `:`, `<`, `=`, `>`, or `is`, found `/`
  --> $DIR/removed-syntax-closure-lifetime.rs:1:22
   |
LL | type closure = Box<lt/fn()>;
   |                      ^ expected one of 10 possible tokens
   |
help: you might have meant to end the type parameters here
   |
LL | type closure = Box<lt>/fn()>;
   |                      +

error: aborting due to previous error

